Updated samples for release 9.0